# XplnObj

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  build.py  changelog.md  conanfile.py  conanfile_vcs.py  doxyfile  mac-9.1-conan-local.sh  msvc-2017-conan-local.bat  msvc-2017.bat  msvc-2019.bat  msvc.bat  readme.md  release-checklist.md  test.bat  vcs_info.py  win-bintray-upload.bat  win-export-local.bat  win-test-package.bat
.ci/: travis-install.sh
cmake/: StsConan.cmake  StsInfoFilesGenerator.cmake  StsProjectDesc.cmake
conan-profiles/: vs2015MD-Debug  vs2015MD-Release  vs2015MT-Debug  vs2015MT-Release  vs2017MD-Debug  vs2017MD-Release  vs2017MT-Debug  vs2017MT-Release
doc/: Jenkins-Pipeline.groovy  build.md  changelog.md  (+6 more)
src/: CMakeLists.txt  stdafx.h
src-test/: CMakeLists.txt  Manual.cpp  MockIWriter.h  TestAttributes.cpp  TestAttributesIO.cpp  TestAttributesIOLogic.cpp  TestAttributesWrite.cpp  TestDrapedIO.cpp  TestEManipulator.cpp  TestEulerXyzHelper.cpp  TestGlobAttributesIO.cpp  TestGlobAttributesWrite.cpp  TestLinearRotation.cpp  TestLod.cpp  TestManip.cpp  TestManipIO.cpp  TestManipIOLogic.cpp  TestManipWrite.cpp  TestManipsStateMachine.cpp  TestObjLightParam.cpp  TestObjWriteState.cpp  TestString.cpp  TestUtils.cpp  TestUtils.h  TestUtilsObjMesh.h  TestWriter.h  test.cpp  totext.h
src-test/Transformation/: TestCommon.cpp  TestLightSpillTransform.cpp  TestTransformation-case-0.cpp  TestTransformation-case-1.cpp  TestTransformation-case-2.cpp  TestTransformation-case-3.cpp  TestTransformation-case-4.cpp  TestTransformation-case-5.cpp  TestTransformation.h  TestTransformationAlgorithm-case-0.cpp  TestTransformationAlgorithm-case-1.cpp  TestTransformationAlgorithm-case-2.cpp  TestTransformationAlgorithm-case-3.cpp  TestTransformationAlgorithm-case-4.cpp  TestTransformationAlgorithm-case-5.cpp  TestTransformationAlgorithm-case-6.cpp  TestTransformationAlgorithm-case-7.cpp  TestTransformationAlgorithm-case-8.cpp
src-test/algorithms/: TestDrapedAlg.cpp  TestInstancingAlg.cpp  TestLodsAlg.cpp
src-test/ph/: stdafx.cpp  stdafx.h
src-test/utils/: TestCommandsFile.cpp  TestDatarefsFile.cpp  TestEulerXyzRotateHelper.cpp  TestLightUtils.cpp  TestLinearRotateHelper.cpp
src/algorithms/: Draped.cpp  Draped.h  InstancingAlg.cpp  InstancingAlg.h  LodsAlg.cpp  LodsAlg.h  TransformAlg.cpp  TransformAlg.h
src/animation/: AnimRotate.cpp  AnimRotateKey.cpp  AnimTrans.cpp  AnimTransKey.cpp  AnimVisibilityKey.cpp  AxisSetRotation.cpp  LinearRotation.cpp  PositionController.cpp  RotationAxis.cpp  RotationController.cpp  Translate.cpp  VisibilityController.cpp  VisibilityKey.cpp
src/attributes/: AttrBlend.cpp  AttrCockpit.cpp  AttrCockpitRegion.cpp  AttrDrapedLayerGroup.cpp  AttrDrapedLod.cpp  AttrHard.cpp  AttrLayerGroup.cpp  AttrLightLevel.cpp  AttrLodDrap.cpp  AttrPolyOffset.cpp  AttrShiny.cpp  AttrSlopeLimit.cpp  AttrSlungLoadWeight.cpp  AttrSpecular.cpp  AttrTint.cpp  AttrWetDry.cpp
src/common/: ArrayLength.h  AttributeNames.h  BaseLogger.h  Color.cpp  EulerXyzHelper.cpp  Flags.h  IInterrupt.h  IInterrupterInternal.h  Logger.cpp  Logger.h  Path.cpp  Point2.cpp  Point3.cpp  Quat.cpp  Quaternion.cpp  Result.h  String.cpp  TMatrix.cpp
src/converters/: Defines.h  ObjAnimString.cpp  ObjAnimString.h  ObjAttrManipString.cpp  ObjAttrManipString.h  ObjAttrString.cpp  ObjAttrString.h  ObjString.cpp  ObjString.h  StringStream.h
src/enums/: ECockpitDevice.cpp  ECursor.cpp  ELayer.cpp  ELightNamed.cpp  ELightParams.cpp  EManipulator.cpp  ESurface.cpp
src/exceptions/: defines.h
src/io/: IOStatistic.cpp  ObjState.cpp  ObjState.h  ObjTransformation.cpp  ObjTransformation.cpp~RF368bb8e.TMP  ObjTransformation.h  ObjValidators.cpp  ObjValidators.h  ObjWriteState.cpp  ObjWriteState.h  StringValidator.h
src/io/reader/: ObjReadParser.cpp  ObjReadParser.h  ObjReader.cpp  ObjReader.h  ObjReaderInterpreter.cpp  ObjReaderInterpreter.cpp~RF3736ed0.TMP  ObjReaderInterpreter.h  ObjReaderListener.h
src/io/writer/: AbstractWriter.h  ObjWriteAnim.cpp  ObjWriteAnim.h  ObjWriteAttr.cpp  ObjWriteAttr.h  ObjWriteGeometry.cpp  ObjWriteGeometry.h  ObjWriteGlobAttr.cpp  ObjWriteGlobAttr.h  ObjWriteInstancing.cpp  ObjWriteInstancing.h  ObjWriteManip.cpp  ObjWriteManip.h  ObjWriteOptimize.cpp  ObjWriteOptimize.h  ObjWritePreparer.cpp  ObjWritePreparer.h  ObjWriteState.cpp  ObjWriteState.h  ObjWriter.cpp  ObjWriter.h  Writer.cpp  Writer.h
src/manipulators/: AttrAxisDetentRange.cpp  AttrAxisDetented.cpp  AttrManip.cpp  AttrManipAxisKnob.cpp  AttrManipAxisSwitchLeftRight.cpp  AttrManipAxisSwitchUpDown.cpp  AttrManipBase.cpp  AttrManipCmd.cpp  AttrManipCmdAxis.cpp  AttrManipCmdKnob.cpp  AttrManipCmdKnob2.cpp  AttrManipCmdSwitchLeftRight.cpp  AttrManipCmdSwitchLeftRight2.cpp  AttrManipCmdSwitchUpDown.cpp  AttrManipCmdSwitchUpDown2.cpp  AttrManipDelta.cpp  AttrManipDragAxis.cpp  AttrManipDragAxisPix.cpp  AttrManipDragRotate.cpp  AttrManipDragXy.cpp  AttrManipKeyFrame.cpp  AttrManipNone.cpp  AttrManipNone.h  AttrManipNoop.cpp  AttrManipPanel.cpp  AttrManipPush.cpp  AttrManipRadio.cpp  AttrManipToggle.cpp  AttrManipWheel.cpp  AttrManipWrap.cpp
src/objects/: ExportContext.cpp  ExportOptions.cpp  ImportContext.cpp  ObjAbstract.cpp  ObjAbstractLight.cpp  ObjDrapedGroup.cpp  ObjDrapedGroup.h  ObjDummy.cpp  ObjEmitter.cpp  ObjLightCustom.cpp  ObjLightNamed.cpp  ObjLightParam.cpp  ObjLightPoint.cpp  ObjLightSpillCust.cpp  ObjLine.cpp  ObjLodGroup.cpp  ObjMain.cpp  ObjMesh.cpp  ObjSmoke.cpp  Transform.cpp
src/sts/geometry/: AxisAngle.h  Converters.h  DrConverters.h  Quaternion.h  TMatrix3.h
src/sts/geometry/_inl_/: Converters.inl
src/sts/geometry/templates/: AxisAngle.h  AxisAngle.inl  Quaternion.h  Quaternion.inl  TMatrix3.h  TMatrix3.inl  Vector2.h  Vector3.h
src/sts/string/: StringConverters.h  StringUtils.cpp  StringUtils.h
src/sts/utilities/: Compare.h  Logger.h
src/sts/utilities/templates/: Single.h  TreeItem.h  TreeItem.inl  TreeItem.inl.h  TreeItemContainers.h
src/utils/: CommandsFile.cpp  DatarefsFile.cpp  EulerXyzRotateHelper.cpp  LightUtils.cpp  LinearRotateHelper.cpp
(+35 files in other folders)
